--- a/everleaf-frontend/package.json
+++ b/everleaf-frontend/package.json
@@ -6,6 +6,8 @@
     "@headlessui/react": "^2.2.4",
     "@heroicons/react": "^2.2.0",
     "@monaco-editor/react": "^4.7.0",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
     "@tailwindcss/forms": "^0.5.10",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
@@ -16,15 +18,17 @@
     "axios": "^1.10.0",
     "framer-motion": "^12.19.1",
     "js-cookie": "^3.0.5",
+    "pdfjs-dist": "^5.3.31",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-pdf": "^10.0.1",
     "react-router-dom": "^7.6.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-scripts build",
+    "build": "react-scripts start",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "deploy": "npm run build && serve -s build"
