--- a/everleaf-frontend/.env.production
+++ b/everleaf-frontend/.env.production
@@ -1,3 +1,2 @@
-# .env.production
-REACT_APP_API_URL=https://your-backend-domain.com/api
-REACT_APP_GOOGLE_CLIENT_ID=your_production_google_client_id
+REACT_APP_API_URL=https://everleaf-production.up.railway.app
+REACT_APP_ENVIRONMENT=production
