--- a/everleaf-backend/package.json
+++ b/everleaf-backend/package.json
@@ -21,6 +21,7 @@
   "license": "ISC",
   "dependencies": {
     "@monaco-editor/react": "^4.7.0",
+    "@pinecone-database/pinecone": "^6.1.1",
     "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
     "compression": "^1.8.0",
@@ -31,6 +32,7 @@
     "express-rate-limit": "^7.5.1",
     "express-session": "^1.18.1",
     "express-validator": "^7.2.1",
+    "form-data": "^4.0.3",
     "google-auth-library": "^10.1.0",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
@@ -38,7 +40,10 @@
     "multer": "^2.0.1",
     "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.3",
+    "openai": "^5.8.2",
+    "pdf-parse": "^1.1.1",
     "pg": "^8.16.2",
+    "react-pdf": "^10.0.1",
     "socket.io": "^4.8.1",
     "uuid": "^11.1.0"
   },
