--- a/everleaf-backend/llm-server/requirements.txt
+++ b/everleaf-backend/llm-server/requirements.txt
@@ -1,7 +1,216 @@
-flask==2.3.3
-flask-cors==4.0.0
-python-dotenv==1.0.0
-requests>=2.32.3
-psycopg2-binary>=2.9.0
-pinecone-client>=3.0.0
-numpy>=1.24.3
+aiohappyeyeballs==2.4.4
+aiohttp==3.11.11
+aiosignal==1.3.2
+annotated-types==0.7.0
+anyio==4.6.2.post1
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
+asttokens==3.0.0
+async-lru==2.0.4
+attrs==24.2.0
+babel==2.16.0
+beautifulsoup4==4.12.3
+bleach==6.2.0
+blinker==1.8.2
+catkin-pkg==1.0.0
+certifi==2024.8.30
+cffi==1.17.1
+charset-normalizer==3.4.0
+click==8.1.7
+colcon-cmake==0.2.29
+colcon-common-extensions==0.3.0
+colcon-core==0.18.4
+colcon-defaults==0.2.9
+colcon-devtools==0.3.0
+colcon-library-path==0.2.1
+colcon-metadata==0.2.5
+colcon-notification==0.3.0
+colcon-output==0.2.13
+colcon-package-information==0.4.0
+colcon-package-selection==0.2.10
+colcon-parallel-executor==0.3.0
+colcon-pkg-config==0.1.0
+colcon-powershell==0.4.0
+colcon-python-setup-py==0.2.9
+colcon-recursive-crawl==0.2.3
+colcon-ros==0.5.0
+colcon-test-result==0.3.8
+colorama==0.4.6
+coloredlogs==15.0.1
+comm==0.2.2
+computer-vision==0.0.6
+contourpy==1.3.0
+coverage==7.6.12
+cycler==0.12.1
+Cython==3.0.11
+dataclasses-json==0.6.7
+debugpy==1.8.9
+decorator==5.1.1
+defusedxml==0.7.1
+distlib==0.3.9
+distro==1.9.0
+docutils==0.21.2
+empy==4.2
+executing==2.1.0
+faiss-cpu==1.9.0.post1
+fastjsonschema==2.21.0
+filelock==3.16.1
+Flask==3.0.3
+fonttools==4.54.1
+fqdn==1.5.1
+frozenlist==1.5.0
+fsspec==2024.10.0
+ghp-import==2.1.0
+greenlet==3.1.1
+h11==0.14.0
+httpcore==1.0.7
+httplib2==0.22.0
+httpx==0.28.0
+httpx-sse==0.4.0
+humanfriendly==10.0
+idna==3.10
+imageio==2.36.1
+iniconfig==2.0.0
+ipykernel==6.29.5
+ipython==8.30.0
+isoduration==20.11.0
+itsdangerous==2.2.0
+jedi==0.19.2
+Jinja2==3.1.4
+jiter==0.8.2
+joblib==1.4.2
+json5==0.10.0
+jsonpatch==1.33
+jsonpointer==3.0.0
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+jupyter-events==0.10.0
+jupyter-lsp==2.2.5
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+jupyter_server==2.14.2
+jupyter_server_terminals==0.5.3
+jupyterlab==4.3.1
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.27.3
+kiwisolver==1.4.7
+langchain==0.3.14
+langchain-community==0.3.14
+langchain-core==0.3.29
+langchain-openai==0.2.14
+langchain-text-splitters==0.3.5
+langsmith==0.2.10
+lazy_loader==0.4
+Markdown==3.7
+MarkupSafe==3.0.1
+marshmallow==3.24.2
+matplotlib==3.9.2
+matplotlib-inline==0.1.7
+mergedeep==1.3.4
+mistune==3.0.2
+mkdocs==1.6.1
+mkdocs-get-deps==0.2.0
+mkdocs-material==9.5.50
+mkdocs-material-extensions==1.3.1
+mpmath==1.3.0
+multidict==6.1.0
+mypy-extensions==1.0.0
+nbclient==0.10.1
+nbconvert==7.16.4
+nbformat==5.10.4
+nest-asyncio==1.6.0
+networkx==3.4.2
+nltk==3.9.1
+notebook_shim==0.2.4
+numpy==2.1.2
+openai==1.59.5
+opencv-python==4.10.0.84
+orjson==3.10.14
+overrides==7.7.0
+packaging==24.1
+paginate==0.5.7
+pandas==2.2.3
+pandocfilters==1.5.1
+parso==0.8.4
+pathspec==0.12.1
+pillow==11.0.0
+platformdirs==4.3.6
+pluggy==1.5.0
+prefetch_generator==1.0.3
+prometheus_client==0.21.0
+prompt_toolkit==3.0.48
+propcache==0.2.1
+protobuf==5.29.3
+psutil==6.1.0
+pure_eval==0.2.3
+pycparser==2.22
+pydantic==2.10.4
+pydantic-settings==2.7.1
+pydantic_core==2.27.2
+Pygments==2.18.0
+pylatexenc==2.10
+pymdown-extensions==10.14.2
+pyparsing==3.2.0
+pyreadline3==3.5.4
+PySocks==1.7.1
+pytest==8.3.3
+pytest-cov==6.0.0
+pytest-repeat==0.9.3
+pytest-rerunfailures==15.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-json-logger==2.0.7
+pytz==2024.2
+pywin32==308
+pywinpty==2.0.14
+PyYAML==6.0.2
+pyyaml_env_tag==0.1
+pyzmq==26.2.0
+referencing==0.35.1
+regex==2024.9.11
+requests==2.32.3
+requests-toolbelt==1.0.0
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rpds-py==0.21.0
+scikit-image==0.25.0
+scikit-learn==1.5.2
+scipy==1.14.1
+seaborn==0.13.2
+Send2Trash==1.8.3
+setuptools==75.2.0
+six==1.16.0
+sniffio==1.3.1
+soupsieve==2.6
+SQLAlchemy==2.0.36
+stack-data==0.6.3
+sympy==1.13.1
+tenacity==9.0.0
+tensorboardX==2.6.2.2
+terminado==0.18.1
+threadpoolctl==3.5.0
+tifffile==2024.12.12
+tiktoken==0.8.0
+tinycss2==1.4.0
+torch==2.5.0
+torchvision==0.20.0
+tornado==6.4.2
+tqdm==4.66.5
+traitlets==5.14.3
+twilio==4.4.0
+types-python-dateutil==2.9.0.20241003
+typing-inspect==0.9.0
+typing_extensions==4.12.2
+tzdata==2024.2
+uri-template==1.3.0
+urllib3==2.2.3
+vcstool==0.3.0
+watchdog==6.0.0
+wcwidth==0.2.13
+webcolors==24.11.1
+webencodings==0.5.1
+websocket-client==1.8.0
+Werkzeug==3.0.4
+yacs==0.1.8
+yarl==1.18.3
