--- a/everleaf-backend/llm-server/requirements.txt
+++ b/everleaf-backend/llm-server/requirements.txt
@@ -13,29 +13,10 @@ babel==2.16.0
 beautifulsoup4==4.12.3
 bleach==6.2.0
 blinker==1.8.2
-catkin-pkg==1.0.0
 certifi==2024.8.30
 cffi==1.17.1
 charset-normalizer==3.4.0
 click==8.1.7
-colcon-cmake==0.2.29
-colcon-common-extensions==0.3.0
-colcon-core==0.18.4
-colcon-defaults==0.2.9
-colcon-devtools==0.3.0
-colcon-library-path==0.2.1
-colcon-metadata==0.2.5
-colcon-notification==0.3.0
-colcon-output==0.2.13
-colcon-package-information==0.4.0
-colcon-package-selection==0.2.10
-colcon-parallel-executor==0.3.0
-colcon-pkg-config==0.1.0
-colcon-powershell==0.4.0
-colcon-python-setup-py==0.2.9
-colcon-recursive-crawl==0.2.3
-colcon-ros==0.5.0
-colcon-test-result==0.3.8
 colorama==0.4.6
 coloredlogs==15.0.1
 comm==0.2.2
@@ -152,7 +133,6 @@ Pygments==2.18.0
 pylatexenc==2.10
 pymdown-extensions==10.14.2
 pyparsing==3.2.0
-pyreadline3==3.5.4
 PySocks==1.7.1
 pytest==8.3.3
 pytest-cov==6.0.0
@@ -162,8 +142,6 @@ python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-json-logger==2.0.7
 pytz==2024.2
-pywin32==308
-pywinpty==2.0.14
 PyYAML==6.0.2
 pyyaml_env_tag==0.1
 pyzmq==26.2.0
@@ -205,7 +183,6 @@ typing_extensions==4.12.2
 tzdata==2024.2
 uri-template==1.3.0
 urllib3==2.2.3
-vcstool==0.3.0
 watchdog==6.0.0
 wcwidth==0.2.13
 webcolors==24.11.1
@@ -214,3 +191,4 @@ websocket-client==1.8.0
 Werkzeug==3.0.4
 yacs==0.1.8
 yarl==1.18.3
+gunicorn==22.0.0
